# yazio-small-test-project

./: .env.bstack  .env.local_emulator  .gitignore  README.md  config.py  pyproject.toml  pytest.ini
config/: project_config.py
data/: app_constants.py  app_strings.py
tests/: conftest.py  test_pass_onboarding.py  test_recipies_add_to_favorite.py  test_tracker_fasting.py  test_tracker_meals.py
utils/: attach.py  helpers.py
yazio/: common_actions.py
yazio/screens/: application.py  fasting_screen.py  home_screen.py  meal_screen.py  onboarding_screen.py  recipes_screen.py
yazio/screens/components/: tabbar.py
